--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,7 +5,7 @@
     "com.unity.multiplayer-hlapi": "1.0.8",
     "com.unity.postprocessing": "3.1.1",
     "com.unity.render-pipelines.universal": "10.5.1",
-    "com.unity.test-framework": "1.1.33",
+    "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
